fixed img issue on mobileview

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,7 +500,9 @@ aside p{
     height: 100%;
     object-fit: cover;
     transition:all 1s; 
-    margin-bottom: 1em; opacity: 0.9; 
+    margin-bottom: 1em; 
+    overflow: hidden;
+    opacity: 0.9; 
 }
 .mid_img:hover{ 
     opacity: 1;
@@ -2515,7 +2517,6 @@ footer .fa:hover {
         }
         .mid_img{ 
             height: 130%;
-            overflow: hidden;
         }
         #gall_R{ 
             grid-column: 1 / 2;  
@@ -3307,9 +3308,6 @@ footer .fa:hover {
                     .mid_img{ 
                         margin-left:-38px;
                         height: 49vh;
-                        opacity: 1;
-                        object-fit: cover;
-                        overflow: hidden;
                     }
                     .mid_img:hover{ 
                         transform: none; 
